[package]
name = "codex_sso_flow"
version = "0.1.0"
edition = "2024"
authors = ["r ansh joseph"]

[dependencies]
base64 = "0.22.1"
hex = "0.4.3"
rand = "0.9.2"
reqwest = { version = "0.12.24", features = ["json", "cookies", "rustls-tls", "blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
urlencoding = "2.1.3"
webbrowser = "1.0.6"